Using Google Maps to display geofences and provide o mock locations to test entrance and dwell in geofences. IntentService shows an alert when inside geofences (compatible with Androird Wear notifications)

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,6 +39,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name="com.morpho.android.intent.ReceiveTransitionsIntentService" />
     </application>
 
 </manifest>
